Short-lived cache for Kafka topics